--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
     margin-top: 30px;
     margin-bottom: 50px;
     font-size: 36px;
-    color: #2C3E50;
+    color: #d2a724;
   }
   
   /* Style the table */
@@ -25,21 +25,21 @@ body {
   }
   
   th {
-    background-color: #2C3E50;
+    background-color: #1463b1;
     color: white;
     font-weight: 600;
     text-transform: uppercase;
   }
   
   tr:nth-child(even) {
-    background-color: #f5f5f5;
+    background-color: #8f2929;
   }
   
 /* Style the form */
 form {
     width: 50%;
     margin: auto;
-    border: 2px solid #2C3E50;
+    border: 2px solid #9db7d2;
     padding: 20px;
     border-radius: 5px;
   }
@@ -56,7 +56,7 @@ form {
     box-sizing: border-box;
     border-radius: 5px;
     border: none;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
   }
   
   input[type="submit"] {
