--- a/public/views/warehouse.ejs
+++ b/public/views/warehouse.ejs
@@ -1,33 +1,37 @@
-<!-- books.ejs -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Warehouse</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <title>Company Details</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <h1></h1>
-  <table class="book-table">
-    <tr>
-      <th>Company</th>
-      <th>Actions</th>
-    </tr>
-    <tr>
-      <th>Product</th>
-    </tr>
-    <% for(var i=0; i < books.length; i++) { %>
-    <tr>
-      <td><%= books[i].title %></td>
-      <td><%= books[i].author %></td>
-      <td>
-        <a href="/book/<%= books[i].id %>">View</a>
-        <a href="/update/<%= books[i].id %>">Edit</a>
-      </td>
-    </tr>
-    <% } %>
-  </table>
-  <div class="link-center">
-    <a href="/create">Create New Book</a>
-  </div>
+  <nav>
+    <ul class="nav-links">
+        <li><a href="/viewCompanies">View Companies</a></li>
+        <li><a href="/addCompany">Add Company</a></li>
+        <li><a href="/editCompany">Edit Company</a></li>
+        <li><a href="/deleteCompany">Delete Company</a></li>
+        <li><a href="/viewProducts">View Products</a></li>
+        <li><a href="/addProduct">Add Product</a></li>
+        <li><a href="/editProduct">Edit Product</a></li>
+        <li><a href="/deleteProduct">Delete Product</a></li>
+    </ul>
+</nav>
+
+    <h1>Company Details</h1>
+    <table class="company-table">
+        <tr>
+            <th>Company Name</th>
+            <th>Company Stock</th>
+            <th>Product Name</th>
+        </tr>
+        <% for(var i=0; i < companies.length; i++) { %>
+            <tr>
+                <td><%= companies[i].CompanyName %></td>
+                <td><%= companies[i].CompanyStock %></td>
+                <td><%= companies[i].Product.Name %></td>
+            </tr>
+        <% } %>
+    </table>
 </body>
 </html>
