--- a/public/views/companies/createcomney.ejs
+++ b/public/views/companies/createcomney.ejs
@@ -9,10 +9,10 @@
   <form action="/companies/create" method="POST">
     <label for="CompanyID">Company ID:</label>
     <input type="text" id="CompanyID" name="CompanyID" required><br>
-
     <label for="CompanyName">Company Name:</label>
     <input type="text" id="CompanyName" name="CompanyName" required><br>
-
+    <label for="CompanyQuantity">CompanyQuantity:</label>
+    <input type="number" id="CompanyQuantity" name="CompanyQuantity" required><br>
     <button type="submit">Create Company</button>
   </form>
 </body>
