--- a/public/views/products/createProductForm.ejs
+++ b/public/views/products/createProductForm.ejs
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <title>Add New Product</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Add New Product</h1>
 
-    <form action="/products/add" method="POST">
-        <label for="productName">Product Name:</label>
-        <input type="text" id="productName" name="productName" required><br>
-
-        <label for="stockQuantity">Stock Quantity:</label>
-        <input type="number" id="stockQuantity" name="stockQuantity" required><br>
-
+    <form action="/products/Add" method="POST">
+        <label for="ProductID">ProductID:</label>
+        <input type="text" id="ProductID" name="ProductID" required><br>
+        <label for="ProductName">Product Name:</label>
+        <input type="text" id="ProductName" name="ProductName" required><br>
+        <label for="StockQuantity">Stock Quantity:</label>
+        <input type="number" id="StockQuantity" name="StockQuantity" required><br>
         <button type="submit">Add Product</button>
     </form>
 
