--- a/public/views/companies/companies.ejs
+++ b/public/views/companies/companies.ejs
@@ -33,7 +33,7 @@
     </table>
     <div class="link-center">
       <a href="/companies/create">Create New Company</a>
-      <a href="/warehouse">Back to Warehouse</a>
+      <a href="/">Back to Warehouse</a>
     </div>
   </body>
 </html>
