--- a/public/views/products/products.ejs
+++ b/public/views/products/products.ejs
@@ -27,6 +27,6 @@
     </tr>
     </table>
     <a href="/products/Add">Add New Product</a>
-    <a href="/warehouse">Back to Warehouse</a>
+    <a href="/">Back to Warehouse</a>
 </body>
 </html>
