--- a/public/views/warehouse.ejs
+++ b/public/views/warehouse.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <h1>Company Details</h1>
+    <h1>Warehouse Details</h1>
     <table class="company-table">
       <tr>
         <th>Company Name</th>
